add books tab to dashboard
